[project]
name = "futured"
version = "1.5"
description = "Functional interface for concurrent futures, including async coroutines."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["concurrent", "futures", "threads", "processes", "async", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coady/futured"
Documentation = "https://coady.github.io/futured"
Changelog = "https://github.com/coady/futured/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/futured/issues"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["futured"]
branch = true
