[project]
name = "futured"
version = "1.5.1"
description = "Functional interface for concurrent futures, including async coroutines."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["concurrent", "futures", "threads", "processes", "async", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coady/futured"
Documentation = "https://coady.github.io/futured"
Changelog = "https://github.com/coady/futured/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/futured/issues"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.ty.rules]
unused-ignore-comment = "error"
unresolved-import = "ignore"

[tool.coverage.run]
source = ["futured"]
branch = true

[dependency-groups]
dev = ["pytest-cov", "pytest-parametrized", "gevent"]
docs = ["mkdocstrings[python]", "mkdocs-jupyter", "httpx"]
