[metadata]
name = futured
version = attr: futured.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Functional interface for concurrent futures, including asynchronous I/O.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/futured
license = Apache Software License
keywords = concurrent, futures, threads, processes, async, asyncio
project_urls =
    Documentation = https://coady.github.io/futured
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = futured
python_requires = >=3.7
tests_require = pytest-cov, pytest-parametrized

[options.package_data]
futured = py.typed

[flake8]
max-line-length = 100
exclude = .venv

[coverage:run]
source = futured
branch = True
